[package]
name = "canapi-stdweb"
version = "0.1.0"
authors = ["Bat' <baptiste@gelez.xyz>"]
description = "Fetch your APIs in the browser"
license = "AGPL-3.0"
repository = "https://github.com/Plume-org/canapi-stdweb"
keywords = ["stdweb", "api", "rest", "fetch", "wasm"]
categories = ["wasm", "web-programming"]

[dependencies]
canapi = "0.1"
serde_json = "1.0"
serde_qs = "0.4"
stdweb = "0.4"
